// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetCategory Get specified category and articleCategories with DELETED status 1`] = `
Object {
  "data": Object {
    "GetCategory": Object {
      "articleCategories": Object {
        "edges": Array [
          Object {
            "node": Object {
              "articleId": "GetCategory2",
              "category": Object {
                "id": "c1",
                "title": "性少數與愛滋病",
              },
              "status": "DELETED",
            },
            "score": null,
          },
        ],
        "totalCount": 1,
      },
      "title": "性少數與愛滋病",
    },
  },
}
`;

exports[`GetCategory Get specified category and articleCategories with NORMAL status 1`] = `
Object {
  "data": Object {
    "GetCategory": Object {
      "articleCategories": Object {
        "edges": Array [
          Object {
            "node": Object {
              "articleId": "GetCategory1",
              "category": Object {
                "id": "c1",
                "title": "性少數與愛滋病",
              },
              "status": "NORMAL",
            },
            "score": null,
          },
        ],
        "totalCount": 1,
      },
      "title": "性少數與愛滋病",
    },
  },
}
`;
